# multiscale-truchet-rs

./: CONTRIBUTING.md  Cargo.toml  MAINTAINERS.md  README.md
src/: main.rs
